--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,81 @@
-@use 'hero';
-@use 'components/infos_bar';
-@use 'components/buttons';
-@use 'event';
-@use 'variables';
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Roboto, sans-serif;
-    color: variables.$textColor;
-    list-style: none;
+}
+
+body {
+    background-image: url(../images/fundo.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 865px;
 }
 
 .container {
-    max-width: 960px;
+    background-color: rgb(51, 62, 78);
+    max-width: 70%;
     width: 100%;
-    margin: 0 auto;
-
-    @media (max-width: 640px) {
-        max-width: 80%;
+    height: 500px;
+    margin-left: 14%;
+    margin-top: 5%;
+    display: block;
     }
 
-    @media (max-width: 1024px) {
-        max-width: 90%;
+.container img {
+    width: 250px;
+    height: 300px;
+    margin-left: 38%;
+}
+
+.text {
+    margin-top: 3%;
+    font-size: 40px;
+    line-height: 56px;
+    color: #fff;
+    font-weight: 700;
+    margin-left: 15%;
+}
+
+@media (max-width: 640px) {
+    .container {
+        max-width: 100%;
+        width: 90%;
+        height: 450px;
+        margin-left: 5%;
+        margin-top: 30%;
+        }
+
+        .container img {
+            width: 200px;
+            height: 200px;
+            margin-left: 25%;
+        }
+
+        .text {
+            margin-top: 3%;
+            font-size: 20px;
+        }
+
+        body {
+            height: 740px;
+        }
+}
+
+
+@media (max-width: 1024px) {
+
+
+        .container img {
+            margin-left: 30%;
+        }
+
+        .text {
+            margin-top: 3%;
+            font-size: 40px;
+        }
+
+    body {
+        height: 900px;
     }
 }
